--- a/app/views/users/hangout-sample.html
+++ b/app/views/users/hangout-sample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <script type="text/javascript" src="//hangoutsapi.talkgadget.google.com/talkgadget/apps/gadgets/js/rpc.js"></script>
@@ -17,4 +17,81 @@
   <h1>hi</h1>
   <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=onClientReady"></script>
 </body>
-</html>
+</html> -->
+
+<html>
+<style type="text/css">
+<!--
+.button {
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
+  background: -moz-linear-gradient(top, #fff, #ddd);
+  border: 1px solid #bbb;
+}
+
+.button:active {
+  background: -webkit-gradient(linear, left top, left bottom, from(#aaa), to(#333));
+  background: -moz-linear-gradient(bottom, #ddd, #aaa); }
+
+  -->
+  </style>
+  <body>
+
+    <script src="//plus.google.com/hangouts/_/api/v1/hangout.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <h3>Simple Hangout App</h3>
+
+    <p>
+      <input class="button" type="button" value="Show participants!" id="showParticipants"
+      style="visibility:hidden;"
+      onClick="showParticipants()"/>
+    </p>
+
+    <div id="participantsDiv"></div>
+
+    <hr>
+
+    <p><a href="http://developers.google.com/+/hangouts/getting-started">Read the docs</a> to learn more about developing hangouts!</a></p>
+
+    <script>
+    function showParticipants() {
+      var participants = gapi.hangout.getParticipants();
+      console.log("participentssssssssssssssssssssssssssssssssssssssssssssssssssss");
+      console.log(participants);
+
+      var retVal = '<p>Participants: </p><ul>';
+
+      for (var index in participants) {
+        var participant = participants[index];
+
+        if (!participant.person) {
+          retVal += '<li>A participant not running this app</li>';
+        }
+        retVal += '<li>' + participant.person.displayName + '</li>';
+      }
+
+      retVal += '</ul>';
+
+      var div = document.getElementById('participantsDiv');
+
+      div.innerHTML = retVal;
+    }
+
+    function init() {
+      // When API is ready...
+      gapi.hangout.onApiReady.add(
+      function(eventObj) {
+        if (eventObj.isApiReady) {
+          document.getElementById('showParticipants')
+          console.log("i am hereeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee")
+          .style.visibility = 'visible';
+        }
+      });
+    }
+
+    // Wait for gadget to load.
+    gadgets.util.registerOnLoadHandler(init);
+  </script>
+</body>
