--- a/app/views/users/hangout_sample.html
+++ b/app/views/users/hangout_sample.html
@@ -21,7 +21,7 @@
 
 <html>
 <style type="text/css">
-<!--
+
 .button {
   border-radius: 3px;
   -moz-border-radius: 3px;
@@ -34,7 +34,7 @@
   background: -webkit-gradient(linear, left top, left bottom, from(#aaa), to(#333));
   background: -moz-linear-gradient(bottom, #ddd, #aaa); }
 
-  -->
+
   </style>
   <body>
 
@@ -56,6 +56,7 @@
     <p><a href="http://developers.google.com/+/hangouts/getting-started">Read the docs</a> to learn more about developing hangouts!</a></p>
 
     <script>
+    console.log("now entereddddddd in handout sampleeeeeeeeeeeeeeeeeeeeeeeee")
     function showParticipants() {
       var participants = gapi.hangout.getParticipants();
       console.log("participentssssssssssssssssssssssssssssssssssssssssssssssssssss");
@@ -95,3 +96,4 @@
     gadgets.util.registerOnLoadHandler(init);
   </script>
 </body>
+</html>
