--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -78,3 +78,24 @@ gapi.hangout.render('placeholder-div4', {
   </section>
 </body>
 </html> -->
+
+
+
+<!--
+<script >
+window.___gcfg = {
+  lang: 'zh-CN',
+  parsetags: 'onload'
+};
+</script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<div id="placeholder-div5"></div>
+<script>
+gapi.hangout.render('placeholder-div5', {
+  'topic': 'cats',
+  'render': 'createhangout',
+  'hangout_type': 'onair',
+  'initial_apps': [{'app_id' : '184219133185', 'start_data' : 'dQw4w9WgXcQ', 'app_type' : 'ROOM_APP' }],
+  'widget_size': 72
+});
+</script> -->
